# perfect-package

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js
.github/actions/setup-python/: action.yaml
.github/workflows/: publish-package.yaml  unit-tests.yaml  update-docs.yaml
_modules/: index.html
_modules/perfect_package/: stub.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt  perfect_package.rst.txt
api/: modules.html  perfect_package.html
docs/: conf.py
perfect_package/: stub.py
tests/unit/: test_stub.py
