[tool.poetry]
name = "perfect-package"
version = "0.1.0"
description = "The best practices I've picked up along the way, all in one place"
authors = ["timothestes <timothestes@gmail.com>"]
readme = "README.md"
packages = [{include = "perfect_package"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
Sphinx = "^6.2.1"
m2r = "^0.3.1"
twine = "^4.0.2"
wheel = "^0.40.0"
poetry = "^1.4.2"


[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
